--- a/demo/src/main/resources/AdminMenu.fxml
+++ b/demo/src/main/resources/AdminMenu.fxml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="727.0" prefWidth="924.0" stylesheets="/dracula.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminMenuController">
+<AnchorPane fx:id="innerToolbar" prefHeight="727.0" prefWidth="924.0" stylesheets="/dracula.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminMenuController">
    <children>
-      <HBox prefHeight="31.0" prefWidth="924.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <fx:include fx:id="innerToolbar" source="Toolbar.fxml" />
-         </children>
-      </HBox>
       <VBox layoutY="46.0" prefHeight="681.0" prefWidth="924.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <VBox prefHeight="67.0" prefWidth="924.0">
