--- a/demo/src/main/resources/OrderMenu.fxml
+++ b/demo/src/main/resources/OrderMenu.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="780.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.OrderMenuController">
+<VBox fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="780.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.OrderMenuController">
     <children>
-      <HBox prefHeight="45.0" prefWidth="1231.0">
-         <children>
-            <fx:include fx:id="innerToolbar" source="Toolbar.fxml" />
-         </children>
-      </HBox>
         <HBox fx:id="ButtonsAboveScrollPane" spacing="5.0">
             <children>
                 <Button fx:id="GoBackButton" mnemonicParsing="false" onAction="#handleGoBack" text="Go Back" />
