--- a/demo/src/main/resources/RegistrationMenu.fxml
+++ b/demo/src/main/resources/RegistrationMenu.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.RegistrationMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.RegistrationMenuController">
     <children>
       <HBox prefHeight="38.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
       </HBox>
@@ -22,7 +25,7 @@
                   </HBox>
                   <HBox AnchorPane.rightAnchor="0.0">
                      <children>
-                          <Button fx:id="quitButton" layoutX="78.0" mnemonicParsing="false" onAction="#quit" text="Quit" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                          <Button fx:id="quitButton" layoutX="78.0" mnemonicParsing="false" onAction="#quit" text="Go Back" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                      </children>
                   </HBox>
                </children>
