--- a/demo/src/main/resources/RestaurantGUI.fxml
+++ b/demo/src/main/resources/RestaurantGUI.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="462.0" prefWidth="681.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginMenuController">
+<AnchorPane prefHeight="462.0" prefWidth="681.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginMenuController">
    <children>
-      <HBox prefHeight="36.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <fx:include source="Toolbar.fxml" />
-         </children>
-      </HBox>
       <HBox layoutX="7.0" layoutY="45.0" spacing="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0">
          <children>
             <ImageView fitHeight="428.0" fitWidth="432.0" pickOnBounds="true" preserveRatio="true">
@@ -36,6 +35,7 @@
                         <Button layoutX="9.0" mnemonicParsing="false" onAction="#handleLogin" text="Login" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
+                  <Button mnemonicParsing="false" onAction="#quit" text="Quit" />
                </children>
             </VBox>
          </children>
