--- a/demo/src/main/resources/Toolbar.fxml
+++ b/demo/src/main/resources/Toolbar.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-
-
-<HBox  prefHeight="45.0" prefWidth="1935.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.ToolbarController">
+<HBox prefHeight="45.0" prefWidth="1935.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.ToolbarController">
     <children> <!-- Include window buttons -->
         <ToolBar fx:id="toolbar" onMouseDragged="#handleMouseDragged" onMousePressed="#handleMousePressed" pickOnBounds="false" prefHeight="45.0" prefWidth="573.0" HBox.hgrow="ALWAYS">
             <items>
@@ -20,10 +21,19 @@
                         </ImageView>
                     </children>
                 </VBox>
-                <HBox alignment="TOP_RIGHT">
-                    <children>
-                        <fx:include source="WindowButtons.fxml" />
-                    </children>
+                <HBox fx:id="windowButtonsContainer" alignment="TOP_RIGHT">
+               <children>
+                  <HBox alignment="TOP_RIGHT">
+                     <children>
+                         <!-- Minimize button -->
+                         <Button onAction="#minimizeAction" styleClass="borderless-button" text="_" />
+                         <!-- Maximize button -->
+                         <Button onAction="#maximizeAction" styleClass="borderless-button" text="[]" />
+                         <!-- Close button -->
+                         <Button onAction="#closeAction" styleClass="borderless-button" text="X" />
+                     </children>
+                  </HBox>
+               </children>
                 </HBox>
             </items>
         </ToolBar>
