--- a/demo/src/main/resources/AdminMenu.fxml
+++ b/demo/src/main/resources/AdminMenu.fxml
@@ -7,36 +7,34 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="innerToolbar" prefHeight="727.0" prefWidth="924.0" stylesheets="/dracula.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminMenuController">
+<AnchorPane fx:id="innerToolbar" prefHeight="780.0" prefWidth="1200.0" stylesheets="/dracula.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminMenuController">
    <children>
-      <VBox layoutY="46.0" prefHeight="681.0" prefWidth="924.0" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <VBox prefHeight="727.0" prefWidth="924.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox prefHeight="67.0" prefWidth="924.0">
+            <Label fx:id="WelcomeLabel" text="Welcome,">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <HBox spacing="10.0">
                <children>
-                  <Label fx:id="WelcomeLabel" text="Welcome,">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-                  <HBox spacing="10.0">
-                     <children>
-                        <Button fx:id="LogoutButton" mnemonicParsing="false" onAction="#handleLogout" text="Logout" />
-                        <Button mnemonicParsing="false" onAction="#refresh" text="Refresh" />
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-            <HBox spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-               <children>
-                  <Button fx:id="switchToItemsButton" onAction="#switchToItemsTableView" text="Switch to Items" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="switchToUsersButton" onAction="#switchToUsersTableView" text="Switch to Users" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="switchToTransactionsButton" onAction="#switchToTransactionsTableView" text="Switch to Transaction" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="LogoutButton" mnemonicParsing="false" onAction="#handleLogout" text="Logout" />
+                  <Button mnemonicParsing="false" onAction="#refresh" text="Refresh" />
                </children>
             </HBox>
-            <HBox fx:id="tableViewHolder" spacing="10.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" />
-            <HBox fx:id="belowTableView" prefHeight="100.0" prefWidth="200.0" />
-            <HBox fx:id="SetCategoryBox" prefHeight="100.0" prefWidth="200.0" />
-            <HBox fx:id="RemoveCategoryBox" prefHeight="100.0" prefWidth="200.0" />
+            <VBox>
+               <children>
+                  <HBox spacing="10.0">
+                     <children>
+                        <Button fx:id="switchToItemsButton" onAction="#switchToItemsTableView" text="Switch to Items" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="switchToUsersButton" onAction="#switchToUsersTableView" text="Switch to Users" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="switchToTransactionsButton" onAction="#switchToTransactionsTableView" text="Switch to Transaction" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox fx:id="tableViewHolder" prefHeight="606.0" prefWidth="860.0" spacing="10.0" />
+                  <HBox fx:id="belowTableView" prefHeight="35.0" prefWidth="924.0" />
+               </children>
+            </VBox>
          </children>
       </VBox>
    </children>
