All Needed Menus Added
Text ffont for TextArea in addTransaction needs to be changed to black

remove needs to be fixed for Transactions, index out of bounds

--- a/demo/src/main/resources/dracula.css
+++ b/demo/src/main/resources/dracula.css
@@ -2659,6 +2659,7 @@ Add support for NO_HEADER tweak in tables .table-view.no-header > .column-header
 }
 
 .text-area {
+  -fx-text-fill: #ff000000;
   -fx-padding: 2px;
   -fx-cursor: default;
 }
