--- a/demo/src/main/resources/AddTransaction.fxml
+++ b/demo/src/main/resources/AddTransaction.fxml
@@ -14,7 +14,7 @@
             <HBox alignment="CENTER" spacing="20.0">
                <children>
                   <Label text="Select a user" />
-                  <ComboBox fx:id="userComboBox" prefWidth="150.0" />
+                  <ComboBox fx:id="userComboBox" prefWidth="150.0" promptText="Select User" />
                </children>
             </HBox>
             <TextArea fx:id="receiptArea" prefHeight="200.0" prefWidth="200.0" promptText="Enter Transaction Details/Receipt Here" />
